# blog-builder

./: .gitignore  Cargo.toml  README.md
example_template/: config.yaml  footer.md  header.md  index.html
example_template/posts/: post-1.md  post-2.md
example_template/style/: style.css
src/: argparse.rs  category.rs  config.rs  files.rs  main.rs  metadata.rs  paths.rs  posts.rs  rss.rs  templates.rs
