[package]
name = "blog-builder"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "0.3.0"
frontmatter = "0.4.0"
yaml-rust = "0.4"
chrono = "0.4"
rss = "2.0.6"
clap = { version = "4.4.7", features = ["derive"] }
